<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_register_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.appcompat.widget.Toolbar>
    <FrameLayout
        android:id="@+id/frameLayout2"
        android:layout_width="431dp"
        android:layout_height="227dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="47sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/circle2"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="125dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/circle"
            tools:ignore="MissingConstraints" />


        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50sp"
            android:layout_marginTop="50sp"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.137"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.427" />



    </FrameLayout>


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="250dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="text"
            android:textColor="@color/black"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:textColorHint="@color/black"
            android:hint="@string/enter_your_name"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:text="@string/email"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/SignUpEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="text"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/SignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="15sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/re_password"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/rePassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/repeat_your_password"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUp_btn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginStart="60sp"
            android:layout_marginTop="50sp"
            android:layout_marginEnd="60sp"
            android:background="@drawable/btn_background"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:layout_marginStart="85sp"
            android:layout_marginTop="15sp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/HaveAccount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Already have an account?"
                android:textColor="@color/green"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/TvLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="10sp"
                android:text="Log in"
                android:textColor="@color/green"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>