<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <FrameLayout
        android:layout_width="431dp"
        android:layout_height="227dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="47sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/circle2"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="125dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/circle"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45sp"
            android:layout_marginTop="50sp"
            android:text="@string/hi_please_login"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/imageView3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView3"
            app:layout_constraintVertical_bias="0.338" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="395dp"
        android:layout_height="489dp"
        android:layout_marginTop="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.691">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:text="@string/email"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/SignInEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="text"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:inputType="textEmailAddress"
            android:padding="5dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:text="@string/password"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/SignInPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:hint="@string/password_hint"
            android:textColorHint="@color/black"
            android:textColor="@color/black"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/ForgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="266dp"
            android:text="@string/forget_password"
            android:textColor="@color/green" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16sp"
                android:layout_marginEnd="16sp"
                android:layout_weight="1"
                android:background="#D9D9D9" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_login_with" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16sp"
                android:layout_marginEnd="16sp"
                android:layout_weight="1"
                android:background="#D9D9D9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="120sp"
                android:layout_height="50sp"
                android:layout_marginStart="20sp"
                android:layout_marginTop="32sp"
                android:layout_marginEnd="30sp"
                android:layout_weight="0.5"
                android:background="@drawable/social_btn_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8sp"
                    app:srcCompat="@drawable/facebook" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:paddingRight="10sp"
                    android:text="@string/facebook"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="50sp"
                android:layout_marginStart="5sp"
                android:layout_marginTop="32sp"
                android:layout_marginEnd="20sp"
                android:layout_weight="0.5"
                android:background="@drawable/social_btn_background"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="50sp"
                    android:layout_height="50sp"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="8sp"
                    app:srcCompat="@drawable/google" />

                <TextView
                    android:id="@+id/Tv_Google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/google"
                    android:textColor="@color/green"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/SignInButton"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:layout_marginStart="60sp"
            android:layout_marginEnd="60sp"
            android:background="@drawable/btn_background"
            android:text="Sign In"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30sp"
            android:orientation="horizontal"
            android:layout_marginTop="15sp"
            android:layout_marginStart="110sp">

            <TextView
                android:id="@+id/NewUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/are_you_new_user"
                android:textColor="@color/green"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/TvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/register"
                android:paddingLeft="5sp"
                android:textColor="@color/green"
                android:textSize="15sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>